# KEK_DQM

./: .gitignore  CMakeLists.txt  EM_scan.py  README.md  agent.py  calib_scan.py  config.py  config_general.yml  dqm_dashboards.yml  envset.sh  hv_equalization_scan.py  hv_equalization_sim.py  llm_provider.py  requirements.txt  run_dqm_freeform.py  run_hv_check.py  run_web.py
DQM/: buildNinstall.sh  compile.sh  draw_Avg.cc  draw_hodoscope.cc  draw_intADC.cc  draw_overlap.cc  draw_peakADC.cc  draw_wave.cc  envset.sh  function.h  monit  monit.cc  rebuild_all.sh
DQM/include/: LinkDef.hh  TBaux.h  TBconfig.h  TBdetector.h  TBevt.h  TBmid.h  TBmonit.h  TBobject.h  TBplotengine.h  TBread.h  TBsingleWaveform.h  TButility.h
DQM/mapping/: hodo_mapping_test.csv  hodo_mapping_test.root  toymapping.csv  (+8 more)
agents/: __init__.py  agent_runner.py  base_agent.py  brain_agent.py  calib_scan_agent.py  dqm_live_worker.py  energy_scan_agent.py  hv_equalization_agent.py  hv_equalization_sim_agent.py  io_handler.py
anomaly/: anomaly_C.pth  anomaly_S.pth  detect_live.py  mapping.csv  testset.csv  trainset.csv
finetuning/: EM_data_gen.py  EM_train.py  __init__.py  brain_data_gen.py  brain_train.py  calib_data_gen.py  calib_train.py  hv_equalization_data_gen.py  hv_equalization_train.py  run_all_training.sh
include/: TBaux.h  TBplotengine.h
mapping/: mapping_KEK.csv  mapping_KEK_DQM.csv  mapping_KEK_anomaly.csv
monit/: compile.sh  config_general.yml  hv_monitor.html  index.html  monit  serve_rootfiles.py
peak/: peakADC.py  peakADC_avg.py
position_scan_results/: final_position_results.json
src/: TBaux.cc  TBmonit.cc  TBplotengine.cc  TBsingleWaveform.cc
templates/: index.html
tools/: base_tool.py  config_loader.py  daq_tool.py  dat_plot_tool.py  dqm_live_worker.py  dqm_tool.py  hv_control_tool.py  hv_equalization.py  hv_equalization_tool.py  hvcontrol.py  position_calculator_tool.py  position_scan_tool.py  run_log_tool.py
web/: min_server.py  server.py  whisper_prompt.py
(+17 files in other folders)
